--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 <uses-permission android:name="android.permission.INTERNET" android:exported="true"/>
     <application
-        android:label="Juta"
+        android:label="TataPies"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
